Added late paper links

--- a/content/posters/2021/Q4/Group 11/students/Eduard Klein Onstenk/student_info.yaml
+++ b/content/posters/2021/Q4/Group 11/students/Eduard Klein Onstenk/student_info.yaml
@@ -1,4 +1,4 @@
 firstName: Eduard
 lastName: Klein Onstenk
-paperUrl: ''
-thesisTitle: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A5ab5bb33-bdda-44ff-8932-ef177b8038eb?collection=education'
+thesisTitle: 'Synthetic data for damage assessment in aircraft turbines'
