--- a/content/posters/2021/Q4/Group 24/students/Andrei Tĩtu/student_info.yaml
+++ b/content/posters/2021/Q4/Group 24/students/Andrei Tĩtu/student_info.yaml
@@ -1,4 +1,4 @@
 firstName: Andrei
 lastName: "T\u0129tu"
-paperUrl: ''
-thesisTitle: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A59c4a8bc-a4ca-41de-9d9d-e29452c3b5ad?collection=education'
+thesisTitle: 'Privacy Preserving Vertical Federated Learning: A Literature Study'
