--- a/content/posters/2021/Q4/Group 38/students/Jacky Lam/student_info.yaml
+++ b/content/posters/2021/Q4/Group 38/students/Jacky Lam/student_info.yaml
@@ -1,4 +1,4 @@
 firstName: Jacky
 lastName: Lam
-paperUrl: ''
-thesisTitle: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A7045f1f2-afce-47d3-a2bd-b17b8e9bae3a?collection=education'
+thesisTitle: 'Reflection art: A drawing interface'
