--- a/content/posters/2021/Q4/Group 58/students/Ivor Zagorac/student_info.yaml
+++ b/content/posters/2021/Q4/Group 58/students/Ivor Zagorac/student_info.yaml
@@ -1,4 +1,4 @@
 firstName: Ivor
 lastName: Zagorac
-paperUrl: ''
-thesisTitle: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Aac6545a4-e6b6-452d-8e56-25c49e1695fd?collection=education'
+thesisTitle: 'Privacy Preservation in a Blockchain-Based Healthcare System'
