--- a/content/posters/2021/Q4/Group 62/students/Nima Salami/student_info.yaml
+++ b/content/posters/2021/Q4/Group 62/students/Nima Salami/student_info.yaml
@@ -1,4 +1,4 @@
 firstName: Nima
 lastName: Salami
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A56d7cb92-f012-4474-a0a6-290381a83a92?collection=education'
 thesisTitle: 'Powerful world of (meta-)genomics held back by lack of Standard Operating Procedures'
