--- a/content/posters/2021/Q4/Group 4/group_info.yaml
+++ b/content/posters/2021/Q4/Group 4/group_info.yaml
@@ -1,4 +1,4 @@
-projectTitle: SeqClu
+projectTitle: 'SeqClu: Real-time sequence clustering using online K-medoids algorithm'
 quarter: 4
 supervisors:
 - A. Nadeem
