Update README instructions, add validation of the domain

--- a/content/posters/2020/Q4/Group 6/students/Beryl van Gelderen/student_info.yaml
+++ b/content/posters/2020/Q4/Group 6/students/Beryl van Gelderen/student_info.yaml
@@ -1,4 +1,4 @@
 firstName: Beryl
 lastName: van Gelderen
-paperUrl: ''
+paperUrl: https://repository.tudelft.nl/islandora/object/uuid%3Abf3dc8a9-b3e2-4cbc-91ad-06f2765fd956?collection=education
 thesisTitle: "Variability of Cooperation in the Spatial Prisoner\uFFFDs Dilemma"
