--- a/content/posters/2021/Q4/Group 38/students/Dirk Remmelzwaal/student_info.yaml
+++ b/content/posters/2021/Q4/Group 38/students/Dirk Remmelzwaal/student_info.yaml
@@ -1,4 +1,4 @@
 firstName: Dirk
 lastName: Remmelzwaal
-paperUrl: ''
-thesisTitle: ''
+paperUrl: https://repository.tudelft.nl/islandora/object/uuid%3A5f883e6b-95ae-4115-81df-625a8c557e4c?collection=education
+thesisTitle: The Proposal of a Novel Pattern Matching Technique for Mirror Anamorphosis
