--- a/.eslintrc
+++ b/.eslintrc
@@ -40,6 +40,7 @@
         "@typescript-eslint/no-unused-vars": "off",
         "no-empty-pattern": "off",
         "unused-imports/no-unused-imports": "error",
-        "no-unused-vars": "off"
+        "no-unused-vars": "off",
+        "endOfLine": "auto"
     }
 }
