--- a/content/posters/2021/Q4/Group 44/students/Matthijs de Lange/student_info.yaml
+++ b/content/posters/2021/Q4/Group 44/students/Matthijs de Lange/student_info.yaml
@@ -1,4 +1,4 @@
 firstName: Matthijs
 lastName: de Lange
-paperUrl: 'Why does the machine punish?'
-thesisTitle: 'https://repository.tudelft.nl/islandora/object/uuid%3Aefc816c3-3a32-4325-a19a-aea15b3757e6?collection=education'
+thesisTitle: Why does the machine punish?
+paperUrl: https://repository.tudelft.nl/islandora/object/uuid%3Aefc816c3-3a32-4325-a19a-aea15b3757e6?collection=education
