Update group 62 files

--- a/content/posters/2022/Q4/Group 62/students/Teodor Dobrev/student_info.yaml
+++ b/content/posters/2022/Q4/Group 62/students/Teodor Dobrev/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: Using a time dependency graph to find the most widely used Debian p
 paperUrl: ''
 firstName: Teodor
 lastName: Dobrev
-repositoryUrl: ''
+repositoryUrl: 'https://github.com/teodordob/SoftwareThatMatters'
