Update group 62 files

--- a/content/posters/2022/Q4/Group 62/students/Denis Corlade/student_info.yaml
+++ b/content/posters/2022/Q4/Group 62/students/Denis Corlade/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Analyzing the Criticality of Apache Maven Packages Through a Temporal Dependency Graph
-paperUrl: 'http://resolver.tudelft.nl/uuid:c489accf-007d-4d79-a0df-c2c4c59c692f'
+paperUrl: 'https://resolver.tudelft.nl/temp'
 firstName: Denis
 lastName: Corlade
 repositoryUrl: 'https://github.com/DenisCorlade19/SoftwareThatMatters'
