--- a/content/posters/2022/Q4/Group 62/students/Teodor Dobrev/student_info.yaml
+++ b/content/posters/2022/Q4/Group 62/students/Teodor Dobrev/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Using a time dependency graph to find the most widely used Debian packages
-paperUrl: '' 
+paperUrl: 'https://resolver.tudelft.nl/temp' 
 firstName: Teodor
 lastName: Dobrev
 repositoryUrl: "https://github.com/teodordob/SoftwareThatMatters"
