--- a/content/posters/2022/Q4/Group 55/students/Petru-Luca Pantea/student_info.yaml
+++ b/content/posters/2022/Q4/Group 55/students/Petru-Luca Pantea/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Adapting to Dynamic User Preferences in Recommendation Systems via Deep Reinforcement Learning
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:9e3e4b62-1056-4d23-b48f-4acb0a708290'
 firstName: Petru-Luca
 lastName: Pantea
 repositoryUrl: 'https://github.com/lucapantea/research-project'
