Add Group 67 files.

--- a/content/posters/2022/Q4/Group 67/students/Mykolas Krupauskas/student_info.yaml
+++ b/content/posters/2022/Q4/Group 67/students/Mykolas Krupauskas/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: A Study of Bugs Found in the Puppet Configuration Management System
-paperUrl: 'https://repository.tudelft.nl/islandora/object/'
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A88050584-7711-4156-9dec-8febd9b32dc8?collection=education'
 firstName: Mykolas
 lastName: Krupauskas
 repositoryUrl: 'https://github.com/MKrupauskas/tudelft-cms-study-of-bugs-artifacts/tree/main/puppet'
