Add Group 3 files.

--- a/content/posters/2022/Q4/Group 3/students/Sérénic Monté/student_info.yaml
+++ b/content/posters/2022/Q4/Group 3/students/Sérénic Monté/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: Tikhonov and Sobolev regularisers compared to user-based KNN collab
 paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Afbf1734d-b022-47da-99fb-5bf0f81d7963?collection=education'
 firstName: Sérénic
 lastName: Monté
-repositoryUrl: None
+repositoryUrl: ''
