--- a/content/posters/2022/Q4/Group 3/students/Karolis Mariunas/student_info.yaml
+++ b/content/posters/2022/Q4/Group 3/students/Karolis Mariunas/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: The Performance of Total Variation Regularizer for User Collaborati
 paperUrl: 'http://resolver.tudelft.nl/uuid:b8db2c7b-0c1c-4d11-a356-58365d7551a2'
 firstName: Karolis
 lastName: Mariunas
-repositoryUrl: None
+repositoryUrl: ''
