--- a/content/posters/2022/Q4/Group 3/students/Lars van Blokland/student_info.yaml
+++ b/content/posters/2022/Q4/Group 3/students/Lars van Blokland/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Total Variation Regularisation for Item KNN Collaborative Filtering: Performance Analysis'
-paperUrl: None
+paperUrl: 'http://resolver.tudelft.nl/'
 firstName: Lars
 lastName: van Blokland
-repositoryUrl: None
+repositoryUrl: ''
