Add Group 3 files.

--- a/content/posters/2022/Q4/Group 3/students/Lars van Blokland/student_info.yaml
+++ b/content/posters/2022/Q4/Group 3/students/Lars van Blokland/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Total Variation Regularisation for Item KNN Collaborative Filtering: Performance Analysis'
-paperUrl: 'http://resolver.tudelft.nl/'
+paperUrl: ''
 firstName: Lars
 lastName: van Blokland
 repositoryUrl: ''
