Add Group 3 files.

--- a/content/posters/2022/Q4/Group 3/students/Melle Koper, ook geschreven Jansen/student_info.yaml
+++ b/content/posters/2022/Q4/Group 3/students/Melle Koper, ook geschreven Jansen/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Item-Item Collaborative Filtering via Graph Regularization
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/'
 firstName: Melle
 lastName: 'Koper, ook geschreven Jansen'
 repositoryUrl: ''
