fixed file paths

--- a/content/posters/2022/Q4/Group 7/students/Hector Peeters/student_info.yaml
+++ b/content/posters/2022/Q4/Group 7/students/Hector Peeters/student_info.yaml
@@ -3,5 +3,5 @@ paperUrl: 'http://resolver.tudelft.nl/uuid:39bff395-1bd6-4905-8554-cef0cd5e7d3e'
 firstName: Hector
 lastName: Peeters
 repositoryUrl: 'https://github.com/HectorPeeters/agda2rust'
-posterPdf: content\posters\2022\Q4\Group 7\students\Hector Peeters\poster.pdf
-posterImg: content\posters\2022\Q4\Group 7\students\Hector Peeters\poster.jpg
+posterPdf: content/posters/2022/Q4/Group 7/students/Hector Peeters/poster.pdf
+posterImg: content/posters/2022/Q4/Group 7/students/Hector Peeters/poster.jpg
