--- a/content/posters/2022/Q4/Group 7/students/Lukas Zimmerhackl/student_info.yaml
+++ b/content/posters/2022/Q4/Group 7/students/Lukas Zimmerhackl/student_info.yaml
@@ -3,5 +3,5 @@ paperUrl: 'http://resolver.tudelft.nl/uuid:dc59471d-6956-450d-bbd7-733ae5ff3f92'
 firstName: Lukas
 lastName: Zimmerhackl
 repositoryUrl: 'https://github.com/LukasZim/agda2java'
-posterPdf: content\posters\2022\Q4\Group 7\students\Lukas Zimmerhackl\poster.pdf
-posterImg: content\posters\2022\Q4\Group 7\students\Lukas Zimmerhackl\poster.jpg
+posterPdf: content/posters/2022/Q4/Group 7/students/Lukas Zimmerhackl/poster.pdf
+posterImg: content/posters/2022/Q4/Group 7/students/Lukas Zimmerhackl/poster.jpg
