Update Group 61 files

--- a/content/posters/2022/Q4/Group 61/students/Jop Schaap/student_info.yaml
+++ b/content/posters/2022/Q4/Group 61/students/Jop Schaap/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: Evaluating Floating-Point Superoptimization with STOKE
+thesisTitle: Evaluating Stochastic Floating-Point Superoptimization with STOKE
 paperUrl: 'http://resolver.tudelft.nl/uuid:8fc5ced7-ecc8-4ad9-8b3d-8a854a27578e'
 firstName: Jop
 lastName: Schaap
