Update Group 34 files.

--- a/content/posters/2022/Q4/Group 34/students/Zenan Guan/student_info.yaml
+++ b/content/posters/2022/Q4/Group 34/students/Zenan Guan/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Group Distributionally Robust Optimization for Solving Out-Of-Domain Generalization and Finding Causal Invariant Relationships
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:13b55f31-48d8-404a-98ee-36391f8db866'
 firstName: Zenan
 lastName: Guan
 repositoryUrl: ''
