--- a/content/posters/2022/Q4/Group 34/students/Anxian Liu/student_info.yaml
+++ b/content/posters/2022/Q4/Group 34/students/Anxian Liu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Evaluating the Performance of the Model Selection with Average ECE and Naive Calibration in Out-of-Domain Generalization Problems for Binary Classifiers
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:00365c48-9e5e-47db-9fe8-962c34011ef6'
 firstName: Anxian
 lastName: Liu
 repositoryUrl: 'https://github.com/Hinslau/Multidomain-calibration'
