--- a/content/posters/2022/Q4/Group 67/students/Matas Rastenis/student_info.yaml
+++ b/content/posters/2022/Q4/Group 67/students/Matas Rastenis/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: A study of bugs in the Ansible configuration management system
-paperUrl: 'https://repository.tudelft.nl/islandora/object/'
+paperUrl: 'http://resolver.tudelft.nl/uuid:8b08f640-92e6-401f-bf8f-384e79fcec0d'
 firstName: Matas
 lastName: Rastenis
 repositoryUrl: 'https://github.com/MKrupauskas/tudelft-cms-study-of-bugs-artifacts/tree/main/ansible'
