Update Group 26 files: Roman Sirokov
Add paper URL for Roman Sirokov.

--- a/content/posters/2022/Q4/Group 26/students/Roman Širokov/student_info.yaml
+++ b/content/posters/2022/Q4/Group 26/students/Roman Širokov/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Studying the Effects of Educative Holographic Projections in VR Environment
-paperUrl: 'https://repository.tudelft.nl/'
+paperUrl: 'http://resolver.tudelft.nl/uuid:99085b36-ce57-47d0-953a-32e5c6b3bf1c'
 firstName: Roman
 lastName: Širokov
 repositoryUrl: ''
