Update Group 1 files.

--- a/content/posters/2022/Q4/Group 1/students/Ji Darwish/student_info.yaml
+++ b/content/posters/2022/Q4/Group 1/students/Ji Darwish/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Instructional Designs of introductory machine learning courses
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:259f787c-dead-4adb-8092-ce9a415684e4?collection=education'
 firstName: Ji
 lastName: Darwish
 repositoryUrl: 'https://github.com/JiDarwish/research_project'
