fix naming of poster files group 5

--- a/content/posters/2022/Q4/Group 49/students/Kanish Dwivedi/student_info.yaml
+++ b/content/posters/2022/Q4/Group 49/students/Kanish Dwivedi/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: A deep dive into the robustness of AdaBoost Ensembling combined with Adversarial Training
-paperUrl: 'placeholder'
+paperUrl: ''
 firstName: Kanish
 lastName: Dwivedi
 repositoryUrl: 'https://github.com/Kanish77/BRP-AdversarialAttacks'
