--- a/content/posters/2022/Q4/Group 49/students/Pietro Vigilanza/student_info.yaml
+++ b/content/posters/2022/Q4/Group 49/students/Pietro Vigilanza/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Black-box Adversarial Attacks using Substitute models: Effects of Data Distributions on Sample Transferability'
-paperUrl: 'placeholder'
+paperUrl: ''
 firstName: Pietro
 lastName: Vigilanza
 repositoryUrl: 'https://github.com/Ray-Escobar/substitute_attack'
