--- a/content/posters/2022/Q4/Group 5/group_info.yaml
+++ b/content/posters/2022/Q4/Group 5/group_info.yaml
@@ -1,4 +1,4 @@
-projectTitle: Edge of glory: Finding feasibility bounds in schedules
+projectTitle: Edge of glory Finding feasibility bounds in schedules
 year: 2022
 supervisors:
   - Eghonghon Eigbe
