--- a/content/posters/2022/Q4/Group 29/students/Justin Rademaker/student_info.yaml
+++ b/content/posters/2022/Q4/Group 29/students/Justin Rademaker/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: Towards trust in human-AI teams
 paperUrl: 'http://resolver.tudelft.nl/uuid:0fa32480-1ced-4631-9ed6-547c75fd5360'
 firstName: Justin
 lastName: Rademaker
-repositoryUrl: 'http://resolver.tudelft.nl/uuid:0fa32480-1ced-4631-9ed6-547c75fd5360'
+repositoryUrl: ''
