--- a/content/posters/2022/Q4/Group 49/students/Floris van Veen/student_info.yaml
+++ b/content/posters/2022/Q4/Group 49/students/Floris van Veen/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Effect of parameter tuning on reducing the number of queries required to perform model stealing
-paperUrl: 'placeholder'
+paperUrl: ''
 firstName: Floris
 lastName: van Veen
 repositoryUrl: 'https://github.com/bwmfvanveen-II/BRP-AdversarialAttacks'
