--- a/content/posters/2022/Q4/Group 54/students/Renāts Jurševskis/student_info.yaml
+++ b/content/posters/2022/Q4/Group 54/students/Renāts Jurševskis/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Training a Negotiating Agent through Self-Play
-paperUrl:
+paperUrl: http://resolver.tudelft.nl/uuid:4b1cc402-cb64-4c86-ac5b-6fcb891f8472
 firstName: Renāts
 lastName: Jurševskis
 repositoryUrl: https://github.com/brenting/negotiation_PPO/tree/testing-self-play
