Solve problems with submissions

--- a/content/posters/2022/Q4/Group 65/students/Giovan Angela/student_info.yaml
+++ b/content/posters/2022/Q4/Group 65/students/Giovan Angela/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: The dynamics induced by Algorithmic Recourse
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:442d5ac1-9bdc-4b09-b9cb-a583365e18f6'
 firstName: Giovan
 lastName: Angela
 repositoryUrl: ''
