--- a/content/posters/2022/Q4/Group 5/students/Angel Karchev/student_info.yaml
+++ b/content/posters/2022/Q4/Group 5/students/Angel Karchev/student_info.yaml
@@ -1,5 +1,4 @@
-thesisTitle: Finding upper bound for tightening of individual
-constraints in flexible manufacturing systems
+thesisTitle: Finding upper bound for tightening of individual constraints in flexible manufacturing systems
 paperUrl: ''
 firstName: Angel
 lastName: Karchev
