--- a/content/posters/2022/Q4/Group 6/students/Gregor Schram/student_info.yaml
+++ b/content/posters/2022/Q4/Group 6/students/Gregor Schram/student_info.yaml
@@ -1,6 +1,4 @@
-thesisTitle: |-
-  Using autoencoders on differentially private federated
-  learning GANs
+thesisTitle: Using autoencoders on differentially private federated learning GANs
 paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:8a5cbf95-2563-42ea-a03c-ea52c05ba66a\?collection\=education'
 firstName: Gregor
 lastName: Schram
