--- a/content/posters/2022/Q4/Group 6/students/Ignjat Pejic/student_info.yaml
+++ b/content/posters/2022/Q4/Group 6/students/Ignjat Pejic/student_info.yaml
@@ -1,7 +1,4 @@
-thesisTitle: |-
-  Effect of Homomorphic Encryption on the
-  Performance of Training Federated Learning
-  Generative Adversarial Networks
+thesisTitle: Effect of Homomorphic Encryption on the Performance of Training Federated Learning Generative Adversarial Networks
 paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
 firstName: Ignjat
 lastName: Pejic
