--- a/content/posters/2022/Q4/Group 6/students/Wouter Jehee/student_info.yaml
+++ b/content/posters/2022/Q4/Group 6/students/Wouter Jehee/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: Improving privacy of Federated Learning Generative Adversarial Networks using Intel SGX
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+thesisTitle: 'Improving privacy of Federated Learning Generative Adversarial Networks using Intel SGX'
+paperUrl: ''
 firstName: Wouter
 lastName: Jehee
 repositoryUrl: 'https://github.com/WJehee/CSE3000'
