--- a/content/posters/2022/Q4/Group 35/students/Jokūbas Kort, de/student_info.yaml
+++ b/content/posters/2022/Q4/Group 35/students/Jokūbas Kort, de/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Effects of Changing the Midge’s Sampling Frequencies on Battery Life and Storage
-paperUrl: 'http://resolver.tudelft.nl/'
+paperUrl: 'http://resolver.tudelft.nl/uuid:ca4ced38-d52f-46d5-8488-83db3a00395e'
 firstName: Jokūbas
 lastName: Kort, de
 repositoryUrl: ''
