Update Group 71 files

--- a/content/posters/2022/Q4/Group 71/students/Teun Buijs/student_info.yaml
+++ b/content/posters/2022/Q4/Group 71/students/Teun Buijs/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 3D Point Cloud Completion from 2.5D Data
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:524c5b6c-7c68-4b13-8ac6-165887d8cea0'
 firstName: Teun
 lastName: Buijs
 repositoryUrl: ''
