--- a/content/posters/2022/Q4/Group 71/students/Thomas Baars/student_info.yaml
+++ b/content/posters/2022/Q4/Group 71/students/Thomas Baars/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Estimating the mass of an object from its point cloud for Tactile Internet
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:0726f87b-7c3e-4303-86eb-a12702f48934'
 firstName: Thomas
 lastName: Baars
 repositoryUrl: ''
