Update Group 6 files.

--- a/content/posters/2022/Q4/Group 6/students/Ignjat Pejic/student_info.yaml
+++ b/content/posters/2022/Q4/Group 6/students/Ignjat Pejic/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Effect of Homomorphic Encryption on the Performance of Training Federated Learning Generative Adversarial Networks
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:07bf7f35-7f1a-4872-bee1-820394a7be1c?collection=education'
 firstName: Ignjat
 lastName: Pejic
 repositoryUrl: 'https://github.com/AJ730/FederatedLearningGans'
