--- a/content/posters/2022/Q4/Group 3/students/Melle Koper, ook geschreven Jansen/student_info.yaml
+++ b/content/posters/2022/Q4/Group 3/students/Melle Koper, ook geschreven Jansen/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Item-Item Collaborative Filtering via Graph Regularization
-paperUrl: 'http://resolver.tudelft.nl/'
+paperUrl: 'http://resolver.tudelft.nl/uuid:acfe69f3-1e21-4620-b727-2e3de816d766'
 firstName: Melle
 lastName: Koper, ook geschreven Jansen
 repositoryUrl: ''
