--- a/content/posters/2022/Q4/Group 3/students/Sérénic Monté/student_info.yaml
+++ b/content/posters/2022/Q4/Group 3/students/Sérénic Monté/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Tikhonov and Sobolev regularisers compared to user-based KNN collaborative filtering
-paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Afbf1734d-b022-47da-99fb-5bf0f81d7963?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:fbf1734d-b022-47da-99fb-5bf0f81d7963'
 firstName: Sérénic
 lastName: Monté
 repositoryUrl: ''
