Update Group 59 files.

--- a/content/posters/2022/Q4/Group 59/students/Philippe de Bekker/student_info.yaml
+++ b/content/posters/2022/Q4/Group 59/students/Philippe de Bekker/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Improving the efficiency of renewable energy assets by optimizing the matching of supply and demand using a smart control algorithm
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:7d7cf1a7-3669-44f8-820f-43821be2246c'
 firstName: Philippe
 lastName: de Bekker
 repositoryUrl: ''
