--- a/content/posters/2022/Q4/Group 29/students/Iulia Dinu/student_info.yaml
+++ b/content/posters/2022/Q4/Group 29/students/Iulia Dinu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Towards trust in human-AI teams
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:c6c5264b-1289-4921-a6f1-754992c6814a'
 firstName: Iulia
 lastName: Dinu
-repositoryUrl: 'https://github.com/plindhorst/Towards-Trust'
+repositoryUrl: ''
