Update Group 40 files.

--- a/content/posters/2022/Q4/Group 40/students/Helena Westermann/student_info.yaml
+++ b/content/posters/2022/Q4/Group 40/students/Helena Westermann/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Using Chromostereopsis to Enhance Depth Perception in Photos by changing the Hue
-paperUrl: 'https://repository.tudelft.nl/'
+paperUrl: 'http://resolver.tudelft.nl/uuid:178a950e-32c3-4397-a014-5a53d740ae74'
 firstName: Helena
 lastName: Westermann
 repositoryUrl: ''
