Update Group 66 files.

--- a/content/posters/2022/Q4/Group 66/students/Donghwi Kim/student_info.yaml
+++ b/content/posters/2022/Q4/Group 66/students/Donghwi Kim/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Different approaches to fitting and extrapolating the learning curve'
-paperUrl: ' http://resolver.tudelft.nl/'
+paperUrl: 'http://resolver.tudelft.nl/uuid:25107a29-606e-4f76-bfa0-d1884fa4da02'
 firstName: Donghwi
 lastName: Kim
 repositoryUrl: ''
