Update Group 15 files

--- a/content/posters/2022/Q4/Group 15/students/Michal Okon/student_info.yaml
+++ b/content/posters/2022/Q4/Group 15/students/Michal Okon/student_info.yaml
@@ -1,4 +1,6 @@
 thesisTitle: Evolving a Search Procedure for Program Synthesis
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:9da22502-e494-47f2-b26e-0d0bdca76500'
 firstName: Michał
 lastName: Okoń
+repositoryUrl: 'https://github.com/FabianRadomski/EvolvingProgramSynthesisers/tree/michal_feature_evolving-search'
+
