--- a/content/posters/2022/Q4/Group 15/students/Lucas Kroes/student_info.yaml
+++ b/content/posters/2022/Q4/Group 15/students/Lucas Kroes/student_info.yaml
@@ -3,3 +3,4 @@ paperUrl: >-
   http://resolver.tudelft.nl/uuid:aa9f379e-f10e-4c52-ac0d-127e1a492b47
 firstName: Lucas
 lastName: Kroes
+repositoryUrl: 'https://github.com/FabianRadomski/EvolvingProgramSynthesisers/tree/lucas-feature_constraint_pre_post_conditions'
