Add Group 69 files

--- a/content/posters/2022/Q4/Group 69/students/Mert Gökbulut/student_info.yaml
+++ b/content/posters/2022/Q4/Group 69/students/Mert Gökbulut/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: Performance Analysis of Monte Carlo Localization Algorithm
 paperUrl: 'https://repository.tudelft.nl/'
 firstName: Mert
 lastName: Gökbulut
-repositoryUrl: 'https://github.com/mgokbulut/MCL-Research'
+repositoryUrl: 'http://resolver.tudelft.nl/uuid:6c53aa49-2cce-49fb-ba86-9a1101d539e4'
