Update Group 37 files.

--- a/content/posters/2022/Q4/Group 37/students/Sanne Veringa/student_info.yaml
+++ b/content/posters/2022/Q4/Group 37/students/Sanne Veringa/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Safeguarding Inclusion When Using Gestures in Microtask Crowdsourcing
-paperUrl: 'https://repository.tudelft.nl/islandora/search/Sanne%20Veringa?collection=education'
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A58139106-e73c-49a8-a0b5-0428d67add9e?collection=education'
 firstName: Sanne
 lastName: Veringa
 repositoryUrl: ''
