--- a/content/posters/2022/Q4/Group 53/students/Janaína Moreira-Kanaley/student_info.yaml
+++ b/content/posters/2022/Q4/Group 53/students/Janaína Moreira-Kanaley/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Smart Team Play: Utility of Population-Based Training for Cooperative AI in Overcooked'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:396f42bd-b50e-47c5-8f41-2b2e6f9b7ab0'
 firstName: Janaína
 lastName: Moreira-Kanaley
 repositoryUrl: 'https://hub.docker.com/r/jmoreirakanaley/pbt'
