Update Group 55 files

--- a/content/posters/2022/Q4/Group 55/students/Yash Mundhra/student_info.yaml
+++ b/content/posters/2022/Q4/Group 55/students/Yash Mundhra/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Minimizing the Long-tail Problem in Collaborative Filtering Based Recommender Systems Using Clustering
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:d3424d17-9e39-407c-a8bd-0a61e0642e82'
 firstName: Yash
 lastName: Mundhra
 repositoryUrl: 'https://gitlab.com/yashmundhra/recommender-system-rp-final'
