Update Group 42 files.

--- a/content/posters/2022/Q4/Group 42/students/Frank van der Heijden/student_info.yaml
+++ b/content/posters/2022/Q4/Group 42/students/Frank van der Heijden/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: An Empirical Analysis of InCoder on the Statement Prediction Task
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:69bb797f-4a62-4fef-afe8-1d9492b8d28e'
 firstName: Frank
 lastName: van der Heijden
 repositoryUrl: 'https://github.com/FrankHeijden/incoder-analysis'
