--- a/content/posters/2022/Q4/Group 42/students/Marc Otten/student_info.yaml
+++ b/content/posters/2022/Q4/Group 42/students/Marc Otten/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: User Evaluation of InCoder Based on Statement Completion
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:09c775cf-fdc5-4e91-88ce-eeed3a76d002'
 firstName: Marc
 lastName: Otten
 repositoryUrl: 'https://github.com/code4me-me/code4me'
