--- a/content/posters/2022/Q4/Group 42/students/Mika Turk/student_info.yaml
+++ b/content/posters/2022/Q4/Group 42/students/Mika Turk/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Improvement of Source Code Conversion for Code Completion
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:9acaa0c3-ba8d-443a-8d06-c296f65c6895'
 firstName: Mika
 lastName: Turk
 repositoryUrl: 'https://github.com/mikaturk/codefill-conversion-improvement'
