--- a/content/posters/2022/Q4/Group 27/students/Marit Radder/student_info.yaml
+++ b/content/posters/2022/Q4/Group 27/students/Marit Radder/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: A proof of concept for aligning sketches to their corresponding painting
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:f418adf1-45d1-4501-846a-c0a94ae44387?collection=education'
 firstName: Marit
 lastName: Radder
 repositoryUrl: ''
