Update Group 14 Files.

--- a/content/posters/2022/Q4/Group 14/students/Alexandru Lungu/student_info.yaml
+++ b/content/posters/2022/Q4/Group 14/students/Alexandru Lungu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Visualizing sailing regatta events in Sailing+
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A61fe80a5-28f5-4695-82f3-daa1c5d2b73e?collection=education'
 firstName: Alexandru
 lastName: Lungu
 repositoryUrl: ''
