--- a/content/posters/2022/Q4/Group 14/students/Christiaan Botha/student_info.yaml
+++ b/content/posters/2022/Q4/Group 14/students/Christiaan Botha/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Smooth, hierarchical competitor clustering using agglomerative hierarchical clustering'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:26ac69f1-ac52-4d3a-b1c8-bf479095cf2e'
 firstName: Christiaan
 lastName: Botha
 repositoryUrl: ''
