--- a/content/posters/2022/Q4/Group 5/students/Angel Karchev/student_info.yaml
+++ b/content/posters/2022/Q4/Group 5/students/Angel Karchev/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Finding upper bound for tightening of individual constraints in flexible manufacturing systems
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:8f951e15-684f-44b6-a9cf-a78b13647c80'
 firstName: Angel
 lastName: Karchev
 repositoryUrl: ''
