Update Group 13 files

--- a/content/posters/2022/Q4/Group 13/students/Gancho Georgiev/student_info.yaml
+++ b/content/posters/2022/Q4/Group 13/students/Gancho Georgiev/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Impact of seismic wave length to detect high-magnitude earthquakes via deep learning
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:a3305121-f074-4f8b-a18d-e512c484733a'
 firstName: Gancho
 lastName: Georgiev
 repositoryUrl: ''
