Update group 32 files.

--- a/content/posters/2022/Q4/Group 32/students/Vincent C.O. van Oudenhoven/student_info.yaml
+++ b/content/posters/2022/Q4/Group 32/students/Vincent C.O. van Oudenhoven/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Empirical study of GANITE's robustness to hidden confounders
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:3c542b31-b934-470a-b44d-21a370fb9ab0'
 firstName: Vincent C.O.
 lastName: van Oudenhoven
 repositoryUrl: 'https://github.com/vcovo/cse3000'
