--- a/content/posters/2022/Q4/Group 69/students/Mert Gökbulut/student_info.yaml
+++ b/content/posters/2022/Q4/Group 69/students/Mert Gökbulut/student_info.yaml
@@ -1,6 +1,6 @@
 thesisTitle: Performance Analysis of Monte Carlo Localization Algorithm
-paperUrl: 'https://repository.tudelft.nl/'
+paperUrl: 'http://resolver.tudelft.nl/uuid:6c53aa49-2cce-49fb-ba86-9a1101d539e4'
 firstName: Mert
 lastName: Gökbulut
-repositoryUrl: 'http://resolver.tudelft.nl/uuid:6c53aa49-2cce-49fb-ba86-9a1101d539e4'
+repositoryUrl: ''
 
