Update Group 11 files

--- a/content/posters/2022/Q4/Group 11/students/Bo Hofstede/student_info.yaml
+++ b/content/posters/2022/Q4/Group 11/students/Bo Hofstede/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'How to train your dragon: On the application of the Metropolis-Hastings method for Program Synthesis'
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:ff0f83c4-032f-4a53-aa3c-af9dc32da13e'
 firstName: Bo
 lastName: Hofstede
 repositoryUrl: 'https://github.com/MarijeTromp/BEP_How_To_Train_Your_Dragon'
