--- a/content/posters/2022/Q4/Group 11/students/Marije Tromp/student_info.yaml
+++ b/content/posters/2022/Q4/Group 11/students/Marije Tromp/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Genetic Algorithms for Inductive Program Synthesis
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:d5d6194c-27d8-4e25-a422-51e7a6bdec05'
 firstName: Marije
 lastName: Tromp
 repositoryUrl: 'https://github.com/MarijeTromp/BEP_How_To_Train_Your_Dragon'
