--- a/content/posters/2022/Q4/Group 11/students/Nathalie van de Werken/student_info.yaml
+++ b/content/posters/2022/Q4/Group 11/students/Nathalie van de Werken/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Improvements in Monte Carlo Tree Search for Inductive Program Synthesis
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:b41df59e-b7a2-40bf-a46b-edcca368528a'
 firstName: Nathalie
 lastName: van de Werken
 repositoryUrl: 'https://github.com/MarijeTromp/BEP_How_To_Train_Your_Dragon'
