--- a/content/posters/2022/Q4/Group 70/students/Bob Brockbernd/student_info.yaml
+++ b/content/posters/2022/Q4/Group 70/students/Bob Brockbernd/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Cognitive activity recognition by analyzing eye movement with convolutional neural networks
-paperUrl: 'https://pure.tudelft.nl/admin/files/123503944/Research_Paper_final.pdf'
+paperUrl: 'http://resolver.tudelft.nl/uuid:5ff6be37-5ba5-4d7c-8070-417a660aac14'
 firstName: Bob
 lastName: Brockbernd
 repositoryUrl: ''
