--- a/content/posters/2022/Q4/Group 70/students/Julian Meijerink/student_info.yaml
+++ b/content/posters/2022/Q4/Group 70/students/Julian Meijerink/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Eye tracking-based Reading Activity Recognition with Conventional Machine Learning Algorithms
-paperUrl: 'https://pure.tudelft.nl/admin/files/123515137/Eye_tracking_based_Reading_Activity_Recognition_with_Conventional_Machine_Learning_Algorithms.pdf'
+paperUrl: 'http://resolver.tudelft.nl/uuid:e60a4977-808a-4e34-be56-22b7272a8415'
 firstName: Julian
 lastName: Meijerink
 repositoryUrl: ''
