--- a/content/posters/2022/Q4/Group 70/students/Violeta Chatalbasheva/student_info.yaml
+++ b/content/posters/2022/Q4/Group 70/students/Violeta Chatalbasheva/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Eye tracking-based Sedentary Activity Recognition with Conventional Machine Learning Algorithms
-paperUrl: 'https://pure.tudelft.nl/admin/files/123502417/Final_Paper_Violeta_Chatalbasheva.pdf'
+paperUrl: 'http://resolver.tudelft.nl/uuid:babb6c72-8e83-4802-aa3e-e1c3b9bd8c68'
 firstName: Violeta
 lastName: Chatalbasheva
 repositoryUrl: ''
