Update Group 20 files.

--- a/content/posters/2022/Q4/Group 20/students/Mikolaj Knap/student_info.yaml
+++ b/content/posters/2022/Q4/Group 20/students/Mikolaj Knap/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Model-Agnostic XAI Models: Benefits, Limitations and Research Directions'
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:34785364-3a1a-4ac0-be8b-668e4fd01721?collection=education'
 firstName: Mikolaj
 lastName: Knap
 repositoryUrl: ''
