--- a/content/posters/2022/Q4/Group 20/students/Vanisha Oedayrajsingh Varma/student_info.yaml
+++ b/content/posters/2022/Q4/Group 20/students/Vanisha Oedayrajsingh Varma/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Investigation and Comparison of Evaluation Methods of Model-Agnostic Explainable AI Models
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:379a7d52-ade9-47a5-b0a5-cdba651db2ff?collection=education'
 firstName: Vanisha
 lastName: Oedayrajsingh Varma
 repositoryUrl: ''
