Update Group 16 files

--- a/content/posters/2022/Q4/Group 16/students/Sam Streef/student_info.yaml
+++ b/content/posters/2022/Q4/Group 16/students/Sam Streef/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Improving the quality of code in IO intensive applications through effect handlers
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=educationi'
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:ffea061f-d832-4d54-9726-8389cd4bf42a?collection=education'
 firstName: Sam
 lastName: Streef
 repositoryUrl: 'https://github.com/sstreef/research-project'
