Fix to own paper link

--- a/content/posters/2022/Q4/Group 60/students/Mikkel Mäkelä/student_info.yaml
+++ b/content/posters/2022/Q4/Group 60/students/Mikkel Mäkelä/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Adaptive Caching with Follow The Perturbed Leader Replacement Policy
-paperUrl: 'https://pure.tudelft.nl/admin/files/123294351/mikke_makela_bachelor_thesis.pdf'
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:a0cf34e8-3598-4277-a800-0d486c186732?collection=education'
 firstName: Mikkel
 lastName: Mäkelä
 repositoryUrl: 'https://github.com/mikkel-makela/caching-simulator'
