Update Group 19 files

--- a/content/posters/2022/Q4/Group 19/students/Filip Dashtevski/student_info.yaml
+++ b/content/posters/2022/Q4/Group 19/students/Filip Dashtevski/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Domain-specific heuristic augmentation of SAT solvers
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:44911e44-f04a-4bae-9f9e-c98b663fe822'
 firstName: Filip
 lastName: Dashtevski
 repositoryUrl: ''
