--- a/content/posters/2022/Q4/Group 19/students/Jelle Pleunes/student_info.yaml
+++ b/content/posters/2022/Q4/Group 19/students/Jelle Pleunes/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: SAT-based optimisation for the resource-constrained project scheduling problem with time-dependent resource capacities and requests
-paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:698692ab-3a12-4a66-ae6a-214d77d4a013?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:698692ab-3a12-4a66-ae6a-214d77d4a013'
 firstName: Jelle
 lastName: Pleunes
 repositoryUrl: 'https://github.com/jpleunes/rcpspt-exact'
