--- a/content/posters/2022/Q4/Group 19/students/João Afonso Miguel Teixeira de Mendonça/student_info.yaml
+++ b/content/posters/2022/Q4/Group 19/students/João Afonso Miguel Teixeira de Mendonça/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Augmentation of SAT Solvers for MRCPSP
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:22033a93-3795-46bd-a5d5-0a6ea4b1b113'
 firstName: João Afonso
 lastName: Miguel Teixeira de Mendonça
 repositoryUrl: 'https://github.com/Jafonso-sudo/MaxSAT-MRCPSP'
