--- a/content/posters/2022/Q4/Group 19/students/Jasper Vermeulen/student_info.yaml
+++ b/content/posters/2022/Q4/Group 19/students/Jasper Vermeulen/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Resource-constraint project scheduling with task preemption and setup times by Boolean satisfiability encoding and satisfiability (SAT) solver
-paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:be0ddcc0-f6ea-45af-b1e6-438fcf1d04d4?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:be0ddcc0-f6ea-45af-b1e6-438fcf1d04d4'
 firstName: Jasper
 lastName: Vermeulen
 repositoryUrl: 'https://github.com/itstherealjasper/CSE3000'
