Update Group 23 files.

--- a/content/posters/2022/Q4/Group 23/students/Harm Hoogeveen/student_info.yaml
+++ b/content/posters/2022/Q4/Group 23/students/Harm Hoogeveen/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: A Uniform Model for Generative and Discriminative Commonsense Knowledge Tuples
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:43539855-1280-49a2-9960-ae8f5512da3f'
 firstName: Harm
 lastName: Hoogeveen
 repositoryUrl: 'https://github.com/HarmHoog/CS-Graph-Generator'
