--- a/content/posters/2022/Q4/Group 23/students/Martijn van Woensel/student_info.yaml
+++ b/content/posters/2022/Q4/Group 23/students/Martijn van Woensel/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Obtaining Query-specific Similar Concepts with BERT-based retrieval For Commonsense Knowledge Gameboard
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:1e30eb9c-bd5f-4097-acc0-6c798681693c'
 firstName: Martijn
 lastName: van Woensel
 repositoryUrl: 'https://github.com/mvanwoensel/Similiar_Concepts'
