add repositeroy link group_75

--- a/content/posters/2022/Q4/Group 75/students/David Vos/student_info.yaml
+++ b/content/posters/2022/Q4/Group 75/students/David Vos/student_info.yaml
@@ -1,4 +1,4 @@
 thesisTitle: Applying Gate Set Tomography on Nitrogen-Vacancy Systems
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:908114ee-b57d-4f7e-869c-7c057a58326e?collection=education'
 firstName: David
 lastName: Vos
