update repo link

--- a/content/posters/2022/Q4/Group 68/students/Shaan Hossain/student_info.yaml
+++ b/content/posters/2022/Q4/Group 68/students/Shaan Hossain/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Receiving data through light with low-end smartphones
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:6bd857a0-7de2-4e17-8998-79301b3ab184'
 firstName: Shaan
 lastName: Hossain
 repositoryUrl: ''
