Update Group 36 files.

--- a/content/posters/2022/Q4/Group 36/students/Max Le Blansch/student_info.yaml
+++ b/content/posters/2022/Q4/Group 36/students/Max Le Blansch/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Solving the Multi-Level Bin Packing Problem with Time Windows using Integer Programming
-paperUrl: T.B.D.
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:cace05a9-aa09-4226-bf93-099308331ac2?collection=education'
 firstName: Max
 lastName: Le Blansch
 repositoryUrl: 'https://github.com/MLeBlansch/MLBPTW'
