Update Group 51 files

--- a/content/posters/2022/Q4/Group 51/students/Marco Bak/student_info.yaml
+++ b/content/posters/2022/Q4/Group 51/students/Marco Bak/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Flexible Job Shop Optimization with Simulated Annealing
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:42195973-11c7-449a-ae7f-e0e44b37079f?collection=education\\'
 firstName: Marco
 lastName: Bak
 repositoryUrl: 'https://github.com/mcbak/rp_dsm'
