--- a/content/posters/2022/Q4/Group 51/students/Tiamo  van Eijmeren/student_info.yaml
+++ b/content/posters/2022/Q4/Group 51/students/Tiamo  van Eijmeren/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: A Heuristic Algorithm for the Flexible Job Shop Problem with Changeover Times
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:173b4692-1d94-4ca1-969b-00dc4ea10d3f?collection=education'
 firstName: Tiamo
 lastName: ' van Eijmeren'
 repositoryUrl: ''
