--- a/content/posters/2022/Q4/Group 51/students/Marko Ivanov/student_info.yaml
+++ b/content/posters/2022/Q4/Group 51/students/Marko Ivanov/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Suitability of Genetic Algorithms for solving Flexible Job Shop Problems
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:fd2a9a5a-8a8a-47be-9746-bf31af4ab6f0?collection=education'
 firstName: Marko
 lastName: Ivanov
 repositoryUrl: 'https://github.com/whodatbo1/research_project_dsm_enzymes/tree/marko_GA'
