--- a/content/posters/2022/Q4/Group 51/students/Tim Numan/student_info.yaml
+++ b/content/posters/2022/Q4/Group 51/students/Tim Numan/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Ant Colony Optimization for DSM's Flexible Job Shop Problem
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid:1699aad0-b838-42a1-970e-f08fadd9eded?collection=education'
 firstName: Tim
 lastName: Numan
 repositoryUrl: 'https://github.com/tnuman/research-project-aco'
