--- a/content/posters/2022/Q4/Group 13/students/Amaury Charlot/student_info.yaml
+++ b/content/posters/2022/Q4/Group 13/students/Amaury Charlot/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: How long before strike can we predict earthquakes with an LSTM neural network?
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:9ae564df-e4db-47b0-9c90-88644b21bff1'
 firstName: Amaury
 lastName: Charlot
 repositoryUrl: ''
