Update Group 45 files

--- a/content/posters/2022/Q4/Group 45/students/Daniela Toader/student_info.yaml
+++ b/content/posters/2022/Q4/Group 45/students/Daniela Toader/student_info.yaml
@@ -1,4 +1,4 @@
 firstName: Daniela
 lastName: Toader
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:7b1ae1e0-d598-479b-adb1-8dfd545f7c2d'
 thesisTitle: Machine-Learning for Optimal Fitness Function Selection in Automated Testing
