--- a/content/posters/2022/Q4/Group 45/students/Ivan Stranski/student_info.yaml
+++ b/content/posters/2022/Q4/Group 45/students/Ivan Stranski/student_info.yaml
@@ -1,4 +1,4 @@
 firstName: Ivan
 lastName: Stranski
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:dcef7e2f-cc53-44c5-af1f-75af00a72287'
 thesisTitle: Training a Machine-Learning Model for Optimal Fitness Function Selection with the Aim of Finding Bugs
