--- a/content/posters/2022/Q4/Group 45/students/Stoyan Dimitrov/student_info.yaml
+++ b/content/posters/2022/Q4/Group 45/students/Stoyan Dimitrov/student_info.yaml
@@ -1,4 +1,4 @@
 firstName: Stoyan
 lastName: Dimitrov
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:02720548-effa-4707-af99-718667c91ae3'
 thesisTitle: Training a Machine-Learning Model for Optimal Fitness Function Selection with the Aim of Finding Bugs
