Update Group 17 files

--- a/content/posters/2022/Q4/Group 17/students/Amar Mešić/student_info.yaml
+++ b/content/posters/2022/Q4/Group 17/students/Amar Mešić/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Evaluating the Use of Pitch Shifting to Improve Automatic Speech Recognition Performance on Southern Dutch Accents
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:f1f54596-adbc-436a-87ac-a40394689b92'
 firstName: Amar
 lastName: Mešić
 repositoryUrl: 'https://github.com/amar-mesic/pitch-shifting-JASMIN-CGN'
