--- a/content/posters/2023/Q2/Group 6/students/Shivani Singh/student_info.yaml
+++ b/content/posters/2023/Q2/Group 6/students/Shivani Singh/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: 'Explaining XAI Models for Fact-Checking - How do different explanation presentation strategies of feature and data attribution techniques affect non-expert understanding?'
+thesisTitle: 'How do different explanation presentation strategies of feature and data attribution techniques affect non-expert understanding?'
 paperUrl: 'http://resolver.tudelft.nl/uuid:f1eee973-791b-474d-9cc1-cd35d64e1e3e'
 firstName: Shivani
 lastName: Singh
