--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint:eslint": "eslint 'src/**/*.{ts,tsx}'",
     "lint:typescript": "tsc",
     "test": "gatsby build --prefix-paths",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public -r https://$GH_TOKEN@github.com/CSE3000-research-project/cse3000-research-project.github.io.git"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "deploy:ci": "gatsby build --prefix-paths && gh-pages -d public -r https://$GH_TOKEN@github.com/CSE3000-research-project/cse3000-research-project.github.io.git"
   },
   "pre-commit": [
     "lint"
