--- a/content/posters/2023/Q2/Group 1/group_info.yaml
+++ b/content/posters/2023/Q2/Group 1/group_info.yaml
@@ -1,6 +1,4 @@
-projectTitle: >-
-  Blockchain-based machine learning solutions for secure Internet of Things
-  Networks
+projectTitle: Blockchain-based machine learning solutions for secure Internet of Things Networks
 year: 2023
 supervisors:
   - Chhagan Lal
