Added paper repo links

--- a/content/posters/2023/Q4/Group 61/Students/Brian Rook/student_info.yaml
+++ b/content/posters/2023/Q4/Group 61/Students/Brian Rook/student_info.yaml
@@ -1,6 +1,7 @@
 thesisTitle: |-
-  A-Maze-ing Arguments in Virtual Reality
-paperUrl: 
+  A-Maze-ing Arguments in Virtual Reality:
+   An Analysis of the Connection between Shared Situational Awareness and Social Modes of Co-Construction in Virtual Reality
+paperUrl: http://resolver.tudelft.nl/uuid:54573a4e-5c70-4b6c-abbb-98fd3e3bc0dd
 firstName: Brian
 lastName: Rook
 repositoryUrl: ''
