--- a/content/posters/2023/Q4/Group 61/Students/Teresa Gomez Mena/student_info.yaml
+++ b/content/posters/2023/Q4/Group 61/Students/Teresa Gomez Mena/student_info.yaml
@@ -1,6 +1,6 @@
 thesisTitle: |-
   Impact of visualizing teammates' actions on the shared situational awareness in virtual reality
-paperUrl: 
+paperUrl: http://resolver.tudelft.nl/uuid:b13164df-5745-4ce3-acac-b825b65e010c
 firstName: Teresa
 lastName: Gomez Mena
 repositoryUrl: ''
