--- a/content/posters/2023/Q4/Group 54/students/Andy Bo Xuan Li/student_info.yaml
+++ b/content/posters/2023/Q4/Group 54/students/Andy Bo Xuan Li/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: "Revealing the Secret to Successful Virtual Meetings: How Personality Traits Impact Conversational Involvement\_in\_a\_Group"
+thesisTitle: "Revealing the Secret to Successful Virtual Meetings: How Personality Traits Impact Conversational Involvement in a Group"
 paperUrl: 'http://resolver.tudelft.nl/uuid:528e9903-aa82-40cd-81fe-7a2c652aa1bf'
 firstName: Andy Bo Xuan
 lastName: Li
