Update Group 59 files

--- a/content/posters/2023/Q4/Group 59/students/Giulio Segalini/student_info.yaml
+++ b/content/posters/2023/Q4/Group 59/students/Giulio Segalini/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: 'Optimal decision trees for the Algorithm Selection Problem: A dynamic programming'
+thesisTitle: 'Optimal decision trees for the Algorithm Selection Problem: A dynamic programming approach'
 paperUrl: 'http://resolver.tudelft.nl/uuid:315aebf3-5c90-47a7-a3ee-7bde2bab6e9c'
 firstName: Giulio
 lastName: Segalini
