--- a/content/posters/2023/Q4/Group 61/Students/Ahmet Hakan Dönmez/student_info.yaml
+++ b/content/posters/2023/Q4/Group 61/Students/Ahmet Hakan Dönmez/student_info.yaml
@@ -1,6 +1,6 @@
 thesisTitle: |-
   Effects of virtual reality characteristics on collaboration between learners
 paperUrl: http://resolver.tudelft.nl/uuid:33efab80-d1c4-489a-914a-603923cc7e15
-firstName: Ahmet
-lastName: Hakan Dönmez
+firstName: Ahmet Hakan
+lastName: Dönmez
 repositoryUrl: ''
